--- a/.travis.yml
+++ b/.travis.yml
@@ -138,7 +138,7 @@ script:
   - python3 ./jenkins.py
 
 # https://docs.travis-ci.com/user/customizing-the-build/#Whitelisting-or-blacklisting-branches
-# Exclude branch 'pkg.template'. Nothing to build there.
+# Only build "Push" builds for post-merge. Otherwise, everything else is a "PR" build.
 branches:
   only:
     - master
