--- a/.travis.yml
+++ b/.travis.yml
@@ -38,36 +38,43 @@ matrix:
       env: >
         TOOLCHAIN=clang-cxx17
         PROJECT_DIR=examples/skia
+        VERBOSE=0
 
     - os: linux
       env: >
         TOOLCHAIN=gcc-7-cxx17
         PROJECT_DIR=examples/skia
+        VERBOSE=0
 
     - os: linux
       env: >
         TOOLCHAIN=android-ndk-r17-api-24-arm64-v8a-clang-libcxx14
         PROJECT_DIR=examples/skia
+        VERBOSE=0
 
     - os: linux
       env: >
         TOOLCHAIN=analyze-cxx17
         PROJECT_DIR=examples/skia
+        VERBOSE=0
 
     - os: linux
       env: >
         TOOLCHAIN=sanitize-address-cxx17
         PROJECT_DIR=examples/skia
+        VERBOSE=0
 
     - os: linux
       env: >
         TOOLCHAIN=sanitize-leak-cxx17
         PROJECT_DIR=examples/skia
+        VERBOSE=0
 
     - os: linux
       env: >
         TOOLCHAIN=sanitize-thread-cxx17
         PROJECT_DIR=examples/skia
+        VERBOSE=0
 
     # }
 
