--- a/.travis.yml
+++ b/.travis.yml
@@ -91,6 +91,7 @@ matrix:
       env: >
         TOOLCHAIN=ios-nocodesign-11-4-dep-9-3
         PROJECT_DIR=examples/Assimp
+        VERBOSE=0
 
     # }
 
