--- a/.travis.yml
+++ b/.travis.yml
@@ -34,28 +34,22 @@ matrix:
   include:
     # Linux {
 
-    # FIXME: https://travis-ci.org/ingenue/hunter/jobs/405231962
-    # lib/libcares.a: error adding symbols: Bad value
-    # - os: linux
-    #   env: >
-    #     TOOLCHAIN=clang-cxx17
-    #     PROJECT_DIR=examples/gRPC
-    #     VERBOSE=0
-    #     HUNTER_JOBS_NUMBER=4
+    - os: linux
+      env: >
+        TOOLCHAIN=clang-cxx17
+        PROJECT_DIR=examples/gRPC
+        VERBOSE=0
+        HUNTER_JOBS_NUMBER=4
 
-    # FIXME: https://travis-ci.com/rbsheth/hunter/jobs/132120867
-    # Somtimes results in an internal compiler error
-    # - os: linux
-    #   env: >
-    #     TOOLCHAIN=gcc-7-cxx17
-    #     PROJECT_DIR=examples/gRPC
+    - os: linux
+      env: >
+        TOOLCHAIN=gcc-7-cxx17
+        PROJECT_DIR=examples/gRPC
 
-    # FIXME: https://travis-ci.org/isaachier/hunter/builds/291260625
-    # FIXME: https://travis-ci.org/isaachier/hunter/builds/291260625
-    # - os: linux
-    #   env: >
-    #     TOOLCHAIN=android-ndk-r17-api-24-arm64-v8a-clang-libcxx14
-    #     PROJECT_DIR=examples/gRPC
+    - os: linux
+      env: >
+        TOOLCHAIN=android-ndk-r17-api-24-arm64-v8a-clang-libcxx14
+        PROJECT_DIR=examples/gRPC
 
     # FIXME: https://travis-ci.org/isaachier/hunter/builds/291260625
     # - os: linux
@@ -100,12 +94,11 @@ matrix:
         PROJECT_DIR=examples/gRPC
         VERBOSE=0
 
-    # FIXME: https://travis-ci.org/isaachier/hunter/builds/291260625
-    # - os: osx
-    #   osx_image: xcode9.4
-    #   env: >
-    #     TOOLCHAIN=ios-nocodesign-11-4-dep-9-3
-    #     PROJECT_DIR=examples/gRPC
+    - os: osx
+      osx_image: xcode9.4
+      env: >
+        TOOLCHAIN=ios-nocodesign-11-4-dep-9-3
+        PROJECT_DIR=examples/gRPC
 
     # }
 
