--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,7 @@ jobs:
     env:
       TOOLCHAIN: ${{ matrix.toolchain }}
       PROJECT_DIR: examples/${{ matrix.example }}
+      GITHUB_USER_PASSWORD: ${{ secrets.CPP_PM_BOT_TOKEN }}
 
     steps:
 
@@ -68,17 +69,26 @@ jobs:
       with:
         python-version: ${{ matrix.python }}
 
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]${GITHUB_REF#refs/heads/}"
+      id: extract_branch
+
     - name: Upgrade pip
       run: |
         python -m pip install --upgrade pip
 
     - name: Build on Unix
       if: runner.os != 'Windows'
+      env:
+        BRANCH_NAME: ${{ steps.extract_branch.outputs.branch }}
       run: |
         bash ${{ matrix.script }}
 
     - name: Build on Windows
       if: runner.os == 'Windows'
+      env:
+        BRANCH_NAME: ${{ steps.extract_branch.outputs.branch }}
       run: |
         ${{ matrix.script }}
 
