--- a/cmake/projects/Qt/schemes/url_sha1_qt.cmake.in
+++ b/cmake/projects/Qt/schemes/url_sha1_qt.cmake.in
@@ -283,8 +283,10 @@ list(APPEND configure_opts "-qt-libjpeg")
 list(APPEND configure_opts "-qt-libpng")
 list(APPEND configure_opts "-qt-pcre")
 if(NOT WIN32)
-  if(HUNTER_Qt_VERSION VERSION_LESS 5.12 OR HUNTER_Qt_VERSION VERSION_GREATER 5.15)
+  if(HUNTER_Qt_VERSION VERSION_LESS 5.12)
     list(APPEND configure_opts "-qt-xkbcommon")
+  elseif(HUNTER_Qt_VERSION VERSION_GREATER 5.15)
+    list(APPEND configure_opts "-system-xkbcommon")
   else()
     list(APPEND configure_opts "-xkbcommon")
   endif()
